--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
+        <!-- <div class="parallax"></div> -->
         <div id="root"></div>
         <div id="popup-root"></div>
         <!--
